--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -7,6 +7,7 @@ version: 2
 # Set the OS, Python version and other tools you might need
 build:
   tools:
+    os: ubuntu-22.04
     python: "3.9"
     # You can also specify other tool versions:
     # nodejs: "20"
