--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -7,7 +7,7 @@ version: 2
 # Set the OS, Python version and other tools you might need
 build:
   tools:
-    os: ubuntu-22.04
+    os: ubuntu-20.04
     python: "3.9"
     # You can also specify other tool versions:
     # nodejs: "20"
@@ -16,6 +16,7 @@ build:
 
 # Build documentation in the "docs/" directory with Sphinx
 sphinx:
+  builder: html
   configuration: docs/conf.py
   # You can configure Sphinx to use a different builder, for instance use the dirhtml builder for simpler URLs
   # builder: "dirhtml"
