--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -33,4 +33,5 @@ sphinx:
 # See https://docs.readthedocs.io/en/stable/guides/reproducible-builds.html
 python:
     install:
+    - requirements: requirements.txt
     - requirements: docs/doc-requirements.txt
