--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -6,8 +6,8 @@ version: 2
 
 # Set the OS, Python version and other tools you might need
 build:
+  os: ubuntu-20.04
   tools:
-    os: ubuntu-20.04
     python: "3.9"
     # You can also specify other tool versions:
     # nodejs: "20"
@@ -33,5 +33,5 @@ sphinx:
 # See https://docs.readthedocs.io/en/stable/guides/reproducible-builds.html
 python:
     install:
-    - requirements: requirements.txt
     - requirements: docs/doc-requirements.txt
+    #- requirements: requirements.txt
